--- a/Contrast Ratio/index.html
+++ b/Contrast Ratio/index.html
@@ -32,7 +32,7 @@
 		</div>
 
 		<div class="results">
-			<h2 id="result-display">4.68</h2>
+			<h2 id="result-display" class="result-display"></h2>
 			<!-- <h2 id="result-display--error">Background input is an invalid format.</h2> -->
 		</div>
 	</main>
